# MCFC

./: .gitignore  Cargo.toml  LANGUAGE.md  README.md  TODO.md  build.rs  build_mcdoc.rs  npc.mcf  plan2.md  project_description.md  test.mcf
ANPC/: README.md  pack.mcmeta
ANPC/data/anpc/advancement/internal/: hurt_interaction.json  interacted_with_interaction.json
ANPC/data/anpc/function/api/: create_default.mcfunction  create_dialogue.mcfunction  create_guard.mcfunction  (+2 more)
ANPC/pilot/: action_queue.mcf
data/: minecraft_registries_snapshot.json
editors/vscode-mcfc/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode-mcfc/scripts/: copy-server.js  install-vscodium-extension.sh  package-vsix.js
editors/vscode-mcfc/src/: extension.ts
editors/vscode-mcfc/syntaxes/: mcfc.tmLanguage.json
editors/vscode-mcfc/syntaxes/test-cases/: sample.mcf
src/: analysis.rs  ast.rs  backend.rs  cli.rs  compiler.rs  diagnostics.rs  ir.rs  lexer.rs  lib.rs  lsp.rs  main.rs  minecraft_ids.rs  minecraft_nbt_schema.rs  optimizer.rs  parser.rs  project.rs  types.rs
taskplane-tasks/: CONTEXT.md
taskplane-tasks/TP-002-modular-compiler-architecture-rfc/: PROMPT.md  STATUS.md
taskplane-tasks/TP-003-extract-compiler-driver-pipeline/: PROMPT.md  STATUS.md
taskplane-tasks/TP-004-introduce-registry-foundations/: PROMPT.md  STATUS.md
taskplane-tasks/TP-005-migrate-first-party-builtin-modules/: PROMPT.md  STATUS.md
taskplane-tasks/TP-006-create-plugin-api-and-static-loading/: PROMPT.md  STATUS.md
tests/: integration.rs
(+89 files in other folders)
