[package]
name = "mcfc"
version = "0.1.0"
edition = "2024"

[lib]
name = "mcfc"
path = "src/lib.rs"

[[bin]]
name = "mcfc"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20"
